--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,10 @@ body {
   font-size: 36px;
 }
 
-@font-face {
+/* @font-face {
   font-family: 'digital-clock-font';
   src: url('/home/natalie/Development/code/countdown-timer/digital-7 (mono).ttf');
-}
+} */
 
 @font-face {
   font-family: 'YourWordFont'; /* Replace with the actual font for the words */
