--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ body {
 
 @font-face {
   font-family: 'digital-clock-font';
-  src: url('/home/natalie/Development/code/countdown-timer/digital-7 (mono).ttf');
+  src: url('digital-7 (mono).ttf');
 }
 
 
