--- a/src/App.css
+++ b/src/App.css
@@ -6,52 +6,56 @@ body {
 .countdown-container {
   text-align: center;
   font-size: 24px;
-  padding-top: 200px;
+  padding-top: 50px; /* Adjust padding as needed */
 }
 
 .digital-clock {
   font-family: 'digital-clock-font';
   display: flex;
-  font-size: 100px;
+  font-size: 60px; /* Adjust the initial font size for larger screens */
   justify-content: space-around;
   margin-top: 20px;
-  flex: 0 0 auto;
+  flex-wrap: wrap; /* Allow items to wrap to the next line on smaller screens */
   position: relative;
-
-  background: linear-gradient(to right, #DF3434,#F88317,#63C634,#3758D0,#6E227A);
+  background: linear-gradient(to right, #DF3434, #F88317, #63C634, #3758D0, #6E227A);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .time-block {
   text-align: center;
-  margin: 0 10px;
+  margin: 0 5px; /* Adjust margin for spacing between numbers */
 }
 
 .time-unit {
-  font-size: 16px;
+  font-size: 12px; /* Adjust the font size for time units */
   margin-top: 5px;
   color: #ffffff; /* White color for the words */
   font-family: 'YourWordFont'; /* Replace with the actual font you want for the words */
 }
 
-
-
 .countdown-over {
   font-family: 'agrandir';
-  font-size: 36px;
+  font-size: 18px; /* Adjust the font size for countdown over message */
 }
-
-@font-face {
-  font-family: 'digital-clock-font';
-  src: url('digital-7 (mono).ttf');
-}
-
 
 .colon {
   display: inline-block;
   vertical-align: middle;
-  margin: 0 5px; /* Adjust the margin as needed for spacing between colons and numbers */
-  margin-top: 100px;
+  margin: 0 2px; /* Adjust margin for spacing between colons and numbers */
 }
 
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  .digital-clock {
+    font-size: 30px; /* Adjust font size for smaller screens */
+  }
+
+  .time-unit {
+    font-size: 10px; /* Adjust font size for time units on smaller screens */
+  }
+
+  .countdown-over {
+    font-size: 16px; /* Adjust font size for countdown over message on smaller screens */
+  }
+}
