--- a/src/App.css
+++ b/src/App.css
@@ -48,16 +48,17 @@ body {
 /* Media query for smaller screens */
 @media (max-width: 576px) {
   .digital-clock {
-    font-size: 5px; /* Adjust font size for smaller screens */
+    font-size: 5vw; /* Adjust font size for smaller screens */
   }
 
   .time-unit {
-    font-size: 5px; /* Adjust font size for time units on smaller screens */
+    font-size: 1em; /* Adjust font size for time units on smaller screens */
   }
 
   .countdown-over {
-    font-size: 18px; /* Adjust font size for countdown over message on smaller screens */
+    font-size: 1.5rem; /* Adjust font size for countdown over message on smaller screens */
   }
+
   .colon {
     margin: 0 2px; /* Adjust margin for spacing between colons and numbers on smaller screens */
   }
